src/test/deca/context/valid/class/28_printPublicField.deca
/* Description:
    test valide en affichant field public

    Historique:
      cree le 21/01/2020
*/

class A {

  int x;

}

{
    A a = new A();
    println(a.x) ;
}
