src/test/deca/context/invalid/class/20_methodeCall.deca
/* Description:
    test invalide en utilisant methodeCall
    (la methode appelé n'existe pas)



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y = 4;

      int getY() {
        return this.y;
      }

   }


{
   A a = new A();
   a.getX();
}
